<resources>
    <string name="app_name" translatable="false">Fitcru-OnDemand Fitness</string>
    <string name="clients" translatable="false">CLIENTS</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="facebook_app_id" translatable="false">629095262112568</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb629095262112568</string>
    <string name="facebook_client_token" translatable="false">361e9adabbf941c043e284b9297bfc88</string>
    <string name="google_clientId" translatable="false">973118070884-lq4i61eg4ea37fs3eoqcn3mddtb1rtk3.apps.googleusercontent.com</string>
    <string name="continue_" translatable="false">Continue</string>
    <string name="lbl_login_email" translatable="false">Login with email</string>
    <string name="lbl_login_mobile" translatable="false">Login with mobile</string>
    <string name="lbl_splash_title" translatable="false">Fitness Made Simple</string>
    <string name="lbl_login_title" translatable="false">Easily track your workout and diet activity.</string>
    <string name="lbl_skip" translatable="false">SKIP</string>
    <string name="lbl_OrLogin" translatable="false">OR LOGIN WITH</string>
    <string name="lbl_letssignin" translatable="false">Let\'s Sign you in.</string>
    <string name="lbl_signin_title" translatable="false">we are going to send you a verification code to confirm your identity</string>
    <string name="lbl_height_weight_title" translatable="false">What\'s your Height &amp; Weight?</string>
    <string name="lbl_height_weight_subtitle" translatable="false">To give you better experience we need to know your Height &amp; Weight</string>
    <string name="lbl_whatbringsTitale" translatable="false">What brings you to Fitcru?</string>
    <string name="lbl_whatbringsSubTitale" translatable="false">Based on this, we can assess your daily calorie requirements</string>
    <string name="weight_loss" translatable="false">Weight Loss</string>
    <string name="weightGain" translatable="false">Weight Gain</string>
    <string name="GainMuscle" translatable="false">Gain Muscle</string>
    <string name="overallfitness" translatable="false">Overall Fitness</string>
    <string name="Lorem" translatable="false">Lorem Ipsum</string>
    <string name="lbl_DietTypeTitle" translatable="false">What\'s your diet type?</string>
    <string name="lbl_DietTypesubTitle" translatable="false">Based on this, we will provide you a curated workout and diet requirements</string>
    <string name="Vegetarian" translatable="false">Vegetarian</string>
    <string name="Non_Vegetarian" translatable="false">Non-Vegetarian</string>
    <string name="Jain" translatable="false">Jain</string>
    <string name="Vegan" translatable="false">Vegan</string>
    <string name="Vegetarian_sub" translatable="false">No eggs , No meat</string>
    <string name="Non_Vegetarian_sub" translatable="false">Egg, Meat , Pescatarian,</string>
    <string name="Jain_sub" translatable="false">Vegetarian, No roots</string>
    <string name="Vegan_sub" translatable="false">No animal products</string>
    <string name="resend_code" translatable="false">Resend Code</string>
    <string name="_000000" translatable="false">000000</string>
    <string name="_9768757845" translatable="false">9768757845</string>
    <string name="enter_the_6_digit_otp_sent_to_nto_proceed" translatable="false">Enter the 6 digit OTP sent to \nto proceed</string>
    <string name="otp_verify" translatable="false">OTP Verify</string>
    <string name="proceed" translatable="false">Proceed</string>
    <string name="let_s_sign_you_in" translatable="false">Let’s Sign you in.</string>
    <string name="we_re_going_to_send_you_a_verification_code_to_confirm_your_identity" translatable="false">We\'re going to send you a verification code to confirm your identity</string>
    <string name="enter_mobile_number" translatable="false">Enter Mobile Number</string>
    <string name="enter_valid_mobile_number" translatable="false">Enter Valid Mobile Number</string>
    <string name="create_password" translatable="false">Create Password</string>
    <string name="keep_it_safe" translatable="false">Will keep it safe.</string>
    <string name="forget_password" translatable="false">Forgot password</string>
    <string name="enter_email_id_associated_with_account" translatable="false">Enter the Email ID associated with your account.</string>
    <string name="retype_pass" translatable="false">Re-type Password</string>
    <string name="enter_email_id" translatable="false">Enter Email Id</string>
    <string name="password" translatable="false">Password</string>
    <string name="enter_your_password" translatable="false">Enter your password</string>
    <string name="forgot_password" translatable="false">Forgot Password</string>
    <string name="password_doesnot_match_pattern" translatable="false">Your Password does not match the pattern</string>
    <string name="min_length" translatable="false">Password min length 8</string>
    <string name="rookie" translatable="false">Rookie</string>
    <string name="traning_year_0_1" translatable="false">0-1 year of traning</string>
    <string name="traning_year_2_5" translatable="false">2-5 year of traning</string>
    <string name="traning_year_5_10" translatable="false">5-10 year of traning</string>
    <string name="traning_year_10" translatable="false">10+ year of traning</string>
    <string name="intermediate" translatable="false">Intermediate</string>
    <string name="pro" translatable="false">Pro</string>
    <string name="elite" translatable="false">Elite</string>
    <string name="fitness_level" translatable="false">How do you describe your fitness level?</string>
    <string name="calorie_requirement" translatable="false">Based on this, we can  Assess your daily  calorie requirements</string>
    <string name="title_activity_how_active" translatable="false">HowActiveActivity</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="skip_c" translatable="false">SKIP</string>
    <string name="how_active" translatable="false">How active are you?</string>
    <string name="little_no_acivity" translatable="false">Little or No Activity</string>
    <string name="sitting_through_day" translatable="false">Sitting throughout the day</string>
    <string name="verylight" translatable="false">Very light</string>
    <string name="steps_0_5" translatable="false">0-5k steps</string>
    <string name="light" translatable="false">Light</string>
    <string name="steps_7" translatable="false">7k steps</string>
    <string name="active" translatable="false">Active</string>
    <string name="stepd_10" translatable="false">10k steps</string>
    <string name="intense" translatable="false">Intense</string>
    <string name="steps_15" translatable="false">15k steps</string>
    <string name="very_intense" translatable="false">Very Intense</string>
    <string name="steps_20" translatable="false">20k steps</string>
    <string name="tell_us_about_you" translatable="false">Tell us about you?</string>
    <string name="to_give_you_better_experience_we_n_need_to_know_your_age" translatable="false">To give you better experience we\n need to know your age</string>
    <string name="select_your_birth_date" translatable="false">Select Your Birth Date</string>
    <string name="what_s_your_gender" translatable="false">What\'s your gender?</string>
    <string name="to_give_you_better_experience_we_n_need_to_know_your_gender" translatable="false">To give you better experience we\n need to know your gender</string>
    <string name="title_activity_questionary_four" translatable="false">QuestionaryFour</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="congratulations" translatable="false">Congratulations!</string>
    <string name="you_have_completed_the_questionnaire_nwe_thank_you_for_your_patience" translatable="false">You have completed the questionnaire.\nwe thank you for your patience</string>
    <string name="bmr" translatable="false">BMR</string>
    <string name="tdee" translatable="false">TDEE</string>
    <string name="fitcru_elite_plan" translatable="false">Fitcru Elite Plan</string>
    <string name="come_on" translatable="false">Come on!</string>
    <string name="phew_lets_drop_some_weight" translatable="false">Phew! lets drop some weight</string>
    <string name="lets_get_you_fit_lets_pack_on_some_muscle" translatable="false">Lets get you fit. Lets pack on some Muscle</string>
    <string name="payment" translatable="false">Payment</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="card" translatable="false">Card</string>
    <string name="view_plan_details" translatable="false">Select</string>
    <string name="u20b9" translatable="false">₹</string>
    <string name="_999" translatable="false">999</string>
    <string name="month" translatable="false">/month</string>
    <string name="select_subscription_plan" translatable="false">Select Plan</string>
    <string name="Transform_Plan" translatable="false">Transform Plan</string>
    <string name="Hereget" translatable="false">Here\'s what you get</string>
    <string name="How_it_works" translatable="false">How it works</string>
    <string name="Total" translatable="false">Total</string>
    <string name="Price_Discount" translatable="false">Price Discount</string>
    <string name="gst" translatable="false">CGST + SGST@18%</string>
    <string name="Payable" translatable="false">Total Payable</string>
    <string name="whowork_detail" translatable="false">In at iaculis lorem. Praesent tempor dictum llus ut molestie. Sed sed an ullamcorper lorem, id cibus odio lorem, id cibus odio…</string>
    <string name="my_insights" translatable="false">My Insights</string>
    <string name="lost_2_kgs_in_10_days" translatable="false">Lost 2 KGs in 10 days</string>
    <string name="ben_parker" translatable="false">Ben Parker</string>
    <string name="in_at_iaculis_lorem_praesent_tempor_dictum_tellus_ut_molestie_sed_sed_ullamcorper_lorem" translatable="false">In at iaculis lorem. Praesent tempor dictum tellus ut molestie. Sed sed ullamcorper lorem.</string>
    <string name="_1_hr_30_min" translatable="false">1 Hr 30 Min</string>
    <string name="_6_session" translatable="false">6 session</string>
    <string name="s_amp_c_lower_body" translatable="false"><![CDATA[S&C Lower Body]]></string>
    <string name="_448_cal" translatable="false">448 Cal</string>
    <string name="_229_cal" translatable="false">229 Cal</string>
    <string name="butter_chicken_burger" translatable="false">Butter Chicken Burger</string>
    <string name="_340" translatable="false">340</string>
    <string name="high_protein" translatable="false">High Protein</string>
    <string name="_08_feb_2022_at_12_16pm" translatable="false">08 feb 2022 at 12:16PM</string>
    <string name="reorder" translatable="false">Reorder</string>
    <string name="high_proein" translatable="false">High Protein</string>
    <string name="strike2" translatable="false"><strike>₹450</strike></string>
    <string name="proteins" translatable="false">Proteins</string>
    <string name="fats" translatable="false">Fats</string>
    <string name="zerog" translatable="false">0g</string>
    <string name="carbs" translatable="false">Carbs</string>
    <string name="carbg" translatable="false">120g</string>
    <string name="add" translatable="false">ADD</string>
</resources>