<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="12dp"
    android:background="@drawable/background_for_food"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="18dp">

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/food_img" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/food_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/manrope_semibold"
            android:padding="5dp"
            android:text="@string/butter_chicken_burger"
            android:textColor="@color/grey_10"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_semibold"
            android:padding="2dp"
            android:text="@string/u20b9"
            android:textColor="@color/grey_10"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/food_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_semibold"
            android:padding="5dp"
            android:text="@string/_340"
            android:textColor="@color/grey_10"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp"
            android:src="@drawable/ic_calory" />

        <TextView
            android:id="@+id/food_cal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/_229_cal"
            android:textColor="@color/grey_40"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:padding="2dp"
            android:src="@drawable/muscles_left_icon" />

        <TextView
            android:id="@+id/food_protein_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/high_protein"
            android:textColor="@color/grey_40"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/food_date_n_time_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/manrope_regular"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/_08_feb_2022_at_12_16pm"
        android:textColor="@color/grey_40"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/reorder_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/round_background_gradient"
        android:fontFamily="@font/notosans_bold"
        android:gravity="center"
        android:text="@string/reorder"
        android:textColor="@color/white"
        android:textSize="18sp" />


</androidx.appcompat.widget.LinearLayoutCompat>